--- a/sourdough-starter-manifest.json
+++ b/sourdough-starter-manifest.json
@@ -24,8 +24,8 @@
   "videos": [
     {
       "active_end_time": "",
-      "active_start_time": "",
-      "feeding_start_time": "2025-08-20T22:20:19",
+      "active_time": "",
+      "feed_time": "2025-08-20T22:20:19",
       "filename": "sourdough-starter-10.mp4",
       "peak_time": "2025-08-21T04:53:01",
       "recipe": "arachnophobia",
@@ -33,8 +33,8 @@
     },
     {
       "active_end_time": "",
-      "active_start_time": "",
-      "feeding_start_time": "2025-08-21T16:27:53",
+      "active_time": "",
+      "feed_time": "2025-08-21T16:27:53",
       "filename": "sourdough-starter-11.mp4",
       "peak_time": "2025-08-22T03:50:00",
       "recipe": "arachnophobia",
@@ -42,8 +42,8 @@
     },
     {
       "active_end_time": "",
-      "active_start_time": "",
-      "feeding_start_time": "2025-08-22T14:31:28",
+      "active_time": "",
+      "feed_time": "2025-08-22T14:31:28",
       "filename": "sourdough-starter-12.mp4",
       "notes": "ThermoPro was not measuring this starter during this run, it was measuring ovent temp while learning about the heatpad",
       "peak_time": "2025-08-22T21:28:01",
@@ -52,8 +52,8 @@
     },
     {
       "active_end_time": "",
-      "active_start_time": "",
-      "feeding_start_time": "2025-08-24T13:37:48",
+      "active_time": "",
+      "feed_time": "2025-08-24T13:37:48",
       "filename": "sourdough-starter-14.mp4",
       "peak_time": "2025-08-25T07:15:41",
       "recipe": "arachnophobia",
@@ -61,8 +61,8 @@
     },
     {
       "active_end_time": "",
-      "active_start_time": "",
-      "feeding_start_time": "2025-08-28T13:39:36",
+      "active_time": "",
+      "feed_time": "2025-08-28T13:39:36",
       "filename": "sourdough-starter-15.mp4",
       "peak_time": "2025-08-28T21:14:12",
       "ratio": "1:1:1",
@@ -72,8 +72,8 @@
     },
     {
       "active_end_time": "",
-      "active_start_time": "",
-      "feeding_start_time": "2025-08-28T13:39:36",
+      "active_time": "",
+      "feed_time": "2025-08-28T13:39:36",
       "filename": "sourdough-starter-15.mp4",
       "peak_time": "2025-08-28T21:19:17",
       "ratio": "1:2:2",
@@ -83,8 +83,8 @@
     },
     {
       "active_end_time": "",
-      "active_start_time": "",
-      "feeding_start_time": "2025-08-28T13:39:36",
+      "active_time": "",
+      "feed_time": "2025-08-28T13:39:36",
       "filename": "sourdough-starter-15.mp4",
       "peak_time": "2025-08-28T21:30:36",
       "ratio": "1:3:3",
@@ -94,8 +94,8 @@
     },
     {
       "active_end_time": "",
-      "active_start_time": "",
-      "feeding_start_time": "2025-08-28T13:39:36",
+      "active_time": "",
+      "feed_time": "2025-08-28T13:39:36",
       "filename": "sourdough-starter-15.mp4",
       "peak_time": "2025-08-28T22:07:29",
       "ratio": "1:5:5",
@@ -105,8 +105,8 @@
     },
     {
       "active_end_time": "",
-      "active_start_time": "",
-      "feeding_start_time": "2025-08-28T13:39:36",
+      "active_time": "",
+      "feed_time": "2025-08-28T13:39:36",
       "filename": "sourdough-starter-15.mp4",
       "peak_time": "2025-08-28T22:06:28",
       "ratio": "1:7:7",
@@ -116,8 +116,8 @@
     },
     {
       "active_end_time": "",
-      "active_start_time": "",
-      "feeding_start_time": "2025-08-28T13:39:36",
+      "active_time": "",
+      "feed_time": "2025-08-28T13:39:36",
       "filename": "sourdough-starter-15.mp4",
       "peak_time": "2025-08-28T22:14:05",
       "ratio": "1:10:10",
@@ -127,8 +127,8 @@
     },
     {
       "active_end_time": "",
-      "active_start_time": "",
-      "feeding_start_time": "2025-09-02T19:39:58",
+      "active_time": "",
+      "feed_time": "2025-09-02T19:39:58",
       "filename": "sourdough-starter-17.mp4",
       "notes": "Multiple starter ratios tested simultaneously with temperature monitoring",
       "peak_time": "2025-09-03T03:13:34",
@@ -139,8 +139,8 @@
     },
     {
       "active_end_time": "",
-      "active_start_time": "",
-      "feeding_start_time": "2025-09-02T19:53:09",
+      "active_time": "",
+      "feed_time": "2025-09-02T19:53:09",
       "filename": "sourdough-starter-17.mp4",
       "notes": "Multiple starter ratios tested simultaneously with temperature monitoring",
       "peak_time": "2025-09-03T05:40:12",
@@ -151,8 +151,8 @@
     },
     {
       "active_end_time": "",
-      "active_start_time": "",
-      "feeding_start_time": "2025-09-02T19:39:58",
+      "active_time": "",
+      "feed_time": "2025-09-02T19:39:58",
       "filename": "sourdough-starter-17.mp4",
       "notes": "Multiple starter ratios tested simultaneously with temperature monitoring",
       "peak_time": "2025-09-03T06:31:27",
@@ -163,8 +163,8 @@
     },
     {
       "active_end_time": "",
-      "active_start_time": "",
-      "feeding_start_time": "2025-09-02T20:00:46",
+      "active_time": "",
+      "feed_time": "2025-09-02T20:00:46",
       "filename": "sourdough-starter-17.mp4",
       "notes": "Multiple starter ratios tested simultaneously with temperature monitoring",
       "peak_time": "2025-09-03T06:51:45",
@@ -175,8 +175,8 @@
     },
     {
       "active_end_time": "",
-      "active_start_time": "",
-      "feeding_start_time": "2025-09-02T20:11:56",
+      "active_time": "",
+      "feed_time": "2025-09-02T20:11:56",
       "filename": "sourdough-starter-17.mp4",
       "notes": "Multiple starter ratios tested simultaneously with temperature monitoring",
       "peak_time": "2025-09-03T08:14:57",
@@ -187,8 +187,8 @@
     },
     {
       "active_end_time": "",
-      "active_start_time": "",
-      "feeding_start_time": "2025-09-07T16:11:46",
+      "active_time": "",
+      "feed_time": "2025-09-07T16:11:46",
       "filename": "sourdough-starter-19.mp4",
       "peak_time": "2025-09-08T00:40:41",
       "ratio": "1:1:1",
@@ -198,8 +198,8 @@
     },
     {
       "active_end_time": "",
-      "active_start_time": "",
-      "feeding_start_time": "2025-09-07T16:32:04",
+      "active_time": "",
+      "feed_time": "2025-09-07T16:32:04",
       "filename": "sourdough-starter-19.mp4",
       "peak_time": "2025-09-08T03:52:48",
       "ratio": "1:7:7",
@@ -209,8 +209,8 @@
     },
     {
       "active_end_time": "",
-      "active_start_time": "",
-      "feeding_start_time": "2025-09-07T16:17:52",
+      "active_time": "",
+      "feed_time": "2025-09-07T16:17:52",
       "filename": "sourdough-starter-19.mp4",
       "peak_time": "2025-09-08T02:58:11",
       "ratio": "1:3:3",
@@ -220,8 +220,8 @@
     },
     {
       "active_end_time": "",
-      "active_start_time": "",
-      "feeding_start_time": "2025-09-07T16:25:28",
+      "active_time": "",
+      "feed_time": "2025-09-07T16:25:28",
       "filename": "sourdough-starter-19.mp4",
       "peak_time": "2025-09-08T03:20:30",
       "ratio": "1:5:5",
@@ -231,8 +231,8 @@
     },
     {
       "active_end_time": "",
-      "active_start_time": "",
-      "feeding_start_time": "2025-09-07T16:38:40",
+      "active_time": "",
+      "feed_time": "2025-09-07T16:38:40",
       "filename": "sourdough-starter-19.mp4",
       "peak_time": "2025-09-08T03:44:21",
       "ratio": "1:10:10",
@@ -242,8 +242,8 @@
     },
     {
       "active_end_time": "",
-      "active_start_time": "",
-      "feeding_start_time": "2025-09-06T18:31:42",
+      "active_time": "",
+      "feed_time": "2025-09-06T18:31:42",
       "filename": "sourdough-starter-18.mp4",
       "peak_time": "2025-09-07T13:03:22",
       "ratio": "1:5:5",
@@ -253,8 +253,8 @@
     },
     {
       "active_end_time": "2025-09-10T08:28:02",
-      "active_start_time": "2025-09-09T19:17:55",
-      "feeding_start_time": "2025-09-09T08:56:20",
+      "active_time": "2025-09-09T19:17:55",
+      "feed_time": "2025-09-09T08:56:20",
       "filename": "sourdough-starter-20.mp4",
       "peak_time": "2025-09-10T01:52:56",
       "ratio": "1:10:10",
@@ -264,8 +264,8 @@
     },
     {
       "active_end_time": "",
-      "active_start_time": "",
-      "feeding_start_time": "2025-09-10T13:17:22",
+      "active_time": "",
+      "feed_time": "2025-09-10T13:17:22",
       "filename": "sourdough-starter-21.mp4",
       "peak_time": "2025-09-11T11:57:57",
       "ratio": "1:10:10",
@@ -275,8 +275,8 @@
     },
     {
       "active_end_time": "",
-      "active_start_time": "2025-09-12T05:40:26",
-      "feeding_start_time": "2025-09-11T20:42:37",
+      "active_time": "2025-09-12T05:40:26",
+      "feed_time": "2025-09-11T20:42:37",
       "filename": "sourdough-starter-22.mp4",
       "peak_time": "2025-09-12T16:43:56",
       "ratio": "1:5.1:5.1",
@@ -286,8 +286,8 @@
     },
     {
       "active_end_time": "2025-09-13T20:49:23",
-      "active_start_time": "2025-09-13T10:12:25",
-      "feeding_start_time": "2025-09-12T20:38:50",
+      "active_time": "2025-09-13T10:12:25",
+      "feed_time": "2025-09-12T20:38:50",
       "peak_time": "2025-09-13T19:41:56",
       "ratio": "1:5:5",
       "recipe": "arachnophobia",
@@ -296,8 +296,8 @@
     },
     {
       "active_end_time": "2025-09-14T16:55:46",
-      "active_start_time": "2025-09-14T06:21:21",
-      "feeding_start_time": "2025-09-13T21:07:31",
+      "active_time": "2025-09-14T06:21:21",
+      "feed_time": "2025-09-13T21:07:31",
       "peak_time": "2025-09-13T18:21:32",
       "ratio": "1:3.1:3.1",
       "recipe": "arachnophobia",
@@ -306,8 +306,8 @@
     },
     {
       "active_end_time": "2025-09-16T17:30:03",
-      "active_start_time": "2025-09-16T01:20:40",
-      "feeding_start_time": "2025-09-15T14:26:41",
+      "active_time": "2025-09-16T01:20:40",
+      "feed_time": "2025-09-15T14:26:41",
       "filename": "sourdough-starter-25.mp4",
       "peak_time": "2025-09-16T15:31:43",
       "ratio": "1:10:10",
@@ -317,8 +317,8 @@
     },
     {
       "active_end_time": "2025-09-17T17:40:13",
-      "active_start_time": "2025-09-17T03:30:18",
-      "feeding_start_time": "2025-09-16T17:39:54",
+      "active_time": "2025-09-17T03:30:18",
+      "feed_time": "2025-09-16T17:39:54",
       "peak_time": "2025-09-17T15:13:55",
       "ratio": "1:5:5",
       "recipe": "arachnophobia",
@@ -327,8 +327,8 @@
     },
     {
       "active_end_time": "",
-      "active_start_time": "2025-09-18T03:55:07",
-      "feeding_start_time": "2025-09-17T17:51:14",
+      "active_time": "2025-09-18T03:55:07",
+      "feed_time": "2025-09-17T17:51:14",
       "incomplete_record": true,
       "peak_time": "2025-09-18T19:27:22",
       "ratio": "1:10:10",
@@ -339,12 +339,42 @@
     {
       "incomplete_record": true,
       "active_end_time": "",
-      "active_start_time": "2025-09-19:T07:34:37",
-      "feeding_start_time": "2025-09-18T20:57:30",
-      "peak_time": "",
-      "ratio": "1:5:5",
+      "active_time": "2025-09-19:T07:34:37",
+      "feed_time": "2025-09-18T20:57:30",
+      "peak_time": "2025-09-19:T19:01:24",
+      "ratio": "1:5.1:5.1",
       "recipe": "arachnophobia",
       "starter_grams": "10"
+    },
+    {
+      "incomplete_record": true,
+      "active_end_time": "2025-09-20T22:38:17",
+      "active_time": "2025-09-20T04:42:46",
+      "feed_time": "2025-09-19T21:14:10",
+      "peak_time": "2025-09-20T20:00:40",
+      "ratio": "1:5.2:5.2",
+      "recipe": "arachnophobia",
+      "starter_grams": "10"
+    },
+    {
+      "incomplete_record": true,
+      "active_end_time": "",
+      "active_time": "2025-09-20T20:00:40",
+      "feed_time": "2025-09-20T15:02:53",
+      "peak_time": "",
+      "ratio": "1:1.05:1.05",
+      "recipe": "arachnophobia",
+      "starter_grams": "20"
+    },
+    {
+      "incomplete_record": true,
+      "active_end_time": "",
+      "active_time": "2025-09-20T",
+      "feed_time": "2025-09-20T",
+      "peak_time": "",
+      "ratio": "1:1:1",
+      "recipe": "arachnophobia",
+      "starter_grams": "20"
     }
   ]
 }
