--- a/sourdough-starter-manifest.json
+++ b/sourdough-starter-manifest.json
@@ -379,12 +379,13 @@
     {
       "incomplete_record": true,
       "active_end_time": "",
-      "active_time": "",
+      "active_time": "2025-09-24T05:11:50",
       "feed_time": "2025-09-23T21:02:43",
       "peak_time": "",
       "ratio": "1:1:1",
       "recipe": "arachnophobia",
-      "starter_grams": "20"
+      "starter_grams": "20",
+      "note": "I discarded this before it peaked.  There was nothing wrong with it though."
     }
   ]
 }
