--- a/sourdough-starter-manifest.json
+++ b/sourdough-starter-manifest.json
@@ -404,6 +404,16 @@
       "ratio": "1:3:3",
       "recipe": "arachnophobia",
       "starter_grams": "13"
+    },
+    {
+      "incomplete_record": true,
+      "active_end_time": "",
+      "active_time": "",
+      "feed_time": "",
+      "peak_time": "",
+      "ratio": "1:1:1",
+      "recipe": "arachnophobia",
+      "starter_grams": "20"
     }
   ]
 }
