--- a/sourdough-starter-manifest.json
+++ b/sourdough-starter-manifest.json
@@ -407,13 +407,23 @@
     },
     {
       "incomplete_record": true,
-      "active_end_time": "",
-      "active_time": "",
-      "feed_time": "",
-      "peak_time": "",
+      "active_end_time": "2025-09-26T22:35:35",
+      "active_time": "2025-09-26T14:47:54",
+      "feed_time": "2025-09-26T13:29:38",
+      "peak_time": "2025-09-26T19:56:59",
       "ratio": "1:1:1",
       "recipe": "arachnophobia",
       "starter_grams": "20"
+    },
+    {
+      "incomplete_record": true,
+      "active_end_time": "",
+      "active_time": "",
+      "feed_time": "2025-09-27T16:52:10",
+      "peak_time": "",
+      "ratio": "1:3.08,3.08",
+      "recipe": "arachnophobia",
+      "starter_grams": "12"
     }
   ]
 }
