--- a/sourdough-starter-manifest.json
+++ b/sourdough-starter-manifest.json
@@ -391,7 +391,7 @@
       "active_end_time": "",
       "active_time": "2025-09-24T16:10:32",
       "feed_time": "2025-09-24T14:25:30",
-      "peak_time": "",
+      "peak_time": "2025-09-25T05:59:08",
       "ratio": "1:3.07:3.07",
       "recipe": "arachnophobia",
       "starter_grams": "42"
@@ -415,12 +415,11 @@
       "starter_grams": "20"
     },
     {
-      "incomplete_record": true,
-      "active_end_time": "",
-      "active_time": "",
+      "active_end_time": "2025-09-28T04:28:03",
+      "active_time": "2025-09-27T18:40:29",
       "feed_time": "2025-09-27T16:52:10",
-      "peak_time": "",
-      "ratio": "1:3.08,3.08",
+      "peak_time": "2025-09-28T20:00:46",
+      "ratio": "1:3.08:3.08",
       "recipe": "arachnophobia",
       "starter_grams": "12"
     }
